--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,28 @@
-pandas~=2.0.3
-nltk~=3.8.1
-joblib~=1.3.1
-scikit-learn~=1.3.0
-matplotlib~=3.7.2
-numpy~=1.25.1
+click==8.1.5
+colorama==0.4.6
+contourpy==1.1.0
+cycler==0.11.0
+fonttools==4.41.0
+future==0.18.3
+joblib==1.3.1
+kiwisolver==1.4.4
+matplotlib==3.7.2
+nltk==3.8.1
+numpy==1.25.1
+packaging==23.1
+pandas==2.0.3
+Pillow==10.0.0
+pip==23.2
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2023.3
+regex==2023.6.3
+scikit-learn==1.3.0
+scipy==1.11.1
+setuptools==65.5.1
+six==1.16.0
+threadpoolctl==3.2.0
+tkintertable==1.3.3
+tqdm==4.65.0
+tzdata==2023.3
+wheel==0.38.4
