--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ nltk==3.8.1
 numpy==1.25.1
 packaging==23.1
 pandas==2.0.3
-Pillow==10.0.0
+pillow==10.2.0
 pip==23.2
 pyparsing==3.0.9
 python-dateutil==2.8.2
